Added docker for mac instructions